--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -2,6 +2,9 @@ version: 1.2
 tools:
    - subclass: cwl
      primaryDescriptorPath: /tools/Dockstore.cwl
+   - subclass: wdl
+     primaryDescriptorPath: /tools/Dockstore.wdl
+     name: wdl
 workflows:
    - subclass: cwl
      primaryDescriptorPath: /workflows/HelloWorld.cwl
