--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -1,8 +1,10 @@
 version: 1.2
 tools:
    - subclass: cwl
+     name: test123
      primaryDescriptorPath: /tools/Dockstore.cwl
 workflows:
    - subclass: cwl
+     name: test1234
      primaryDescriptorPath: /workflows/HelloWorld.cwl
      publish: true
